--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,21 +5,21 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - REPOSITORY_URI=971076122335.dkr.ecr.ap-south-1.amazonaws.com/demo
-      - DOCKER_LOGIN_PASSWORD=$(aws ecr get-login-password  --region ap-south-1)
-      - docker login -u AWS -p $DOCKER_LOGIN_PASSWORD https://971076122335.dkr.ecr.ap-south-1.amazonaws.com
+      - REPOSITORY_URI=331327498143.dkr.ecr.us-east-1.amazonaws.com/awscpl
+      - DOCKER_LOGIN_PASSWORD=$(aws ecr get-login-password  --region us-east-1)
+      - docker login -u AWS -p $DOCKER_LOGIN_PASSWORD https://331327498143.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t  $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER} .
+      - docker build -t  $REPOSITORY_URI:awscpl-${CODEBUILD_BUILD_NUMBER} .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER}
+      - docker push $REPOSITORY_URI:awscpl-${CODEBUILD_BUILD_NUMBER}
       - echo writing image definitions file...
-      - printf '[{"name":"demo","imageUri":"%s"}]' $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER} > imagedefinitions.json
+      - printf '[{"name":"awscpl","imageUri":"%s"}]' $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER} > imagedefinitions.json
       - cat imagedefinitions.json 
       - pwd
 artifacts:
