--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,9 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - REPOSITORY_URI=public.ecr.aws/a9n4n9b5/demo
+      - REPOSITORY_URI=381783421401.dkr.ecr.us-east-1.amazonaws.com/vijay
       - DOCKER_LOGIN_PASSWORD=$(aws ecr get-login-password  --region us-east-1)
-      - docker login -u AWS -p $DOCKER_LOGIN_PASSWORD public.ecr.aws/a9n4n9b5/demo
+      - docker login -u AWS -p $DOCKER_LOGIN_PASSWORD https://381783421401.dkr.ecr.us-east-1.amazonaws.com/vijay:latest
   build:
     commands:
       - echo Build started on `date`
