--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - aws --version
       - REPOSITORY_URI=381783421401.dkr.ecr.us-east-1.amazonaws.com/vijay
       - DOCKER_LOGIN_PASSWORD=$(aws ecr get-login-password  --region us-east-1)
-      - docker login -u AWS -p $DOCKER_LOGIN_PASSWORD https://381783421401.dkr.ecr.us-east-1.amazonaws.com/vijay
+      - docker login -u AWS -p $DOCKER_LOGIN_PASSWORD https://381783421401.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
