--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,8 +19,8 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:awscpl-${CODEBUILD_BUILD_NUMBER}
       - echo writing image definitions file...
-      - printf '[{"name":"awscpl","imageUri":"%s"}]' $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER} > imagedefinitions.json
-      - cat imagedefinitions.json 
+      - printf '[{"name":"vijay","imageUri":"%s"}]' $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER} > imagedefinitions.json
+      - cat imagedefinitions.jsony
       - pwd
 artifacts:
     files: imagedefinitions.json
