--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,14 +12,14 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t  $REPOSITORY_URI:awscpl-${CODEBUILD_BUILD_NUMBER} .
+      - docker build -t  $REPOSITORY_URI:vijay-${CODEBUILD_BUILD_NUMBER} .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:awscpl-${CODEBUILD_BUILD_NUMBER}
+      - docker push $REPOSITORY_URI:vijay-${CODEBUILD_BUILD_NUMBER}
       - echo writing image definitions file...
-      - printf '[{"name":"vijay","imageUri":"%s"}]' $REPOSITORY_URI:demo-app-${CODEBUILD_BUILD_NUMBER} > imagedefinitions.json
+      - printf '[{"name":"vijay","imageUri":"%s"}]' $REPOSITORY_URI:vijay-${CODEBUILD_BUILD_NUMBER} > imagedefinitions.json
       - cat imagedefinitions.jsony
       - pwd
 artifacts:
